# proxima_hmi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: FreeRTOSConfig.h
lib/: CMakeLists.txt
lib/bsp/: CMakeLists.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt  common.cpp
src/common/audio/: CMakeLists.txt
src/common/audio/include/: audio_buffer.h  audio_decoder.h  audio_file.h  audio_format.h  audio_result.h  audio_stream.h  audio_system.h
src/common/audio/src/: audio_buffer.c  audio_decoder.c  audio_file.c  audio_format.c  audio_result.c  audio_system.c
src/common/core/: CMakeLists.txt
src/common/core/include/: common.h
src/common/include/: common.hpp
src/common/src/: common.c
src/hmi/: CMakeLists.txt  main.c  main.cpp
